# EasyApp

./: .gitignore  BasicC++.html  BasicC++.js  BasicMinimalC++.js  EXAMPLES.md  LICENSE  README.md  index.html  pyproject.toml
.github/workflows/: wasm.yml
EasyApp/Gui/Animations/: TranslationChange.qml
EasyApp/Gui/Charts/: Plotly1dMeasVsCalc.qml  QtCharts1dBase 2.qml  QtCharts1dBase.qml  QtCharts1dMeasVsCalc.qml  QtCharts1dValueAxis.qml  qmldir
EasyApp/Gui/Components/: AboutDialog.qml  ApplicationWindow.qml  GuideWindow.qml  JsonListModel.qml  PreferencesDialog.qml  ProjectDescriptionDialog.qml  SideBar.qml  SideBarColumn.qml  TableView.qml  TableViewButton.qml  TableViewCheckBox.qml  TableViewDelegate.qml  TableViewDoubleLabelControl.qml  TableViewHeader.qml  (+6 more)
EasyApp/Logic/: Logging.py  Translate.py
docs/: index.html
easyApp/: Logging.py  Maintenance.py  __init__.py
easyApp/Animations/: ThemeChange.qml  TranslationChange.qml
easyApp/Charts/: AreaSeries.qml  BaseBokeh.qml  BaseChemDoodle.html  BaseChemDoodle.qml  BasePlot.qml  BaseQtCharts.qml  ChartView.qml  LineSeries.qml  ScatterSeries.qml  ValueAxis.qml  qmldir
easyApp/Components/: AboutDialog.qml  AppBarCentralTabs.qml  ApplicationWindow.qml  ContentPage.qml  GuideWindow.qml  MainContent.qml  PreferencesDialog.qml  ProjectDescriptionDialog.qml  SideBar.qml  SideBarColumn.qml  TableView.qml  TableViewButton.qml  TableViewCheckBox.qml  TableViewComboBox.qml  TableViewDelegate.qml  TableViewHeader.qml  TableViewLabel.qml  TableViewTextInput.qml
easyApp/Elements/: AppBarTabButton.qml  ApplicationWindow.qml  Button.qml  CheckBox.qml  CheckIndicator.qml  ComboBox.qml  CursorDelegate.qml  Dialog.qml  DialogButtonBox.qml  GroupBox.qml  GroupButton.qml  GroupColumn.qml  GroupRow.qml  Label.qml  LinkedImage.qml  MenuItem.qml  Parameter.qml  RadioButton.qml  RemoteController.qml  RemotePointer.qml  RunningLabel.qml  SideBarButton.qml  Slider.qml  SliderHandle.qml  SpinBox.qml  StatusBar.qml  TabBar.qml  TabButton.qml  TextArea.qml  TextField.qml  TextInput.qml  ToolBar.qml  ToolButton.qml  ToolTip.qml  qmldir
easyApp/Globals/: Variables.qml  qmldir
easyApp/Logic/: Maintenance.py  Plotting.js  Translate.js  Translate.py  Utils.js
easyApp/Maintenance/: qmldir
easyApp/Style/: Colors.qml  Sizes.qml  Times.qml  qmldir
examples/: README.md
examples/AdvancedPy/: README.md  pyproject.toml
examples/AdvancedPy/scripts/: create_python_wheel.sh  unpack_wheel.sh
examples/AdvancedPy/src/: AdvancedPy.pyproject  AdvancedPy.qmlproject
examples/AdvancedPy/src/AdvancedPy/: main.py
examples/AdvancedPy/src/AdvancedPy/Backends/: qmldir  real_backend.py
examples/AdvancedPy/src/AdvancedPy/Backends/MockQml/: Project.qml
examples/AdvancedPy/src/AdvancedPy/Backends/real_py/: helpers.py  project.py
examples/AdvancedPy/src/AdvancedPy/Gui/Globals/: ApplicationInfo.qml  BackendWrapper.qml  References.qml
examples/AdvancedPy/src/AdvancedPy/Gui/Pages/Report/MainArea/: Summary.qml
examples/AdvancedPy/src/AdvancedPy/Gui/Pages/Report/Sidebar/Basic/Groups/: Export.qml
examples/BasicC++/: main.cpp  resources.qrc
examples/BasicMinimalC++/: README.md
examples/BasicMinimalPy/: BasicMinimalPy.pyproject  BasicMinimalPy.qmlproject  README.md
examples/BasicNoPy/: BasicNoPy.qmlproject  README.md
examples/BasicPy/: BasicPy.pyproject  BasicPy.qmlproject  README.md
examples/BasicQml/: README.md
examples/ExampleApp/: main.py
examples/IntermediatePy/: README.md  pyproject.toml
examples/IntermediatePy/src/: IntermediatePy.pyproject  IntermediatePy.qmlproject
examples/IntermediatePy/src/IntermediatePy/: main.py
examples/IntermediatePy/src/IntermediatePy/Backends/: MockBackendProxy.qml  real_backend.py
examples/IntermediatePy/src/IntermediatePy/Backends/RealPy/: real_backend.py  report.py  status.py
examples/IntermediatePy/src/IntermediatePy/Backends/real_py/: project.py
examples/IntermediatePy/src/IntermediatePy/Gui/: ApplicationWindow.qml  StatusBar.qml
examples/IntermediatePy/src/IntermediatePy/Gui/Globals/: ApplicationInfo.qml  Backend.qml  BackendProxy.qml  BackendWrapper.qml
examples/IntermediatePy/src/IntermediatePy/Gui/Pages/Project/: Layout.qml
examples/IntermediatePy/src/IntermediatePy/Gui/Pages/Project/MainArea/: Description.qml
examples/IntermediatePy/src/IntermediatePy/Gui/Pages/Project/Sidebar/Basic/Groups/: Examples.qml
examples/IntermediatePy/src/IntermediatePy/Gui/Pages/Project/Sidebar/Basic/Popups/: ProjectDescription.qml
examples/IntermediatePy/src/IntermediatePy/Gui/Pages/Report/: Layout.qml
examples/IntermediatePy/src/IntermediatePy/Gui/Pages/Report/MainArea/: Summary.qml
examples/IntermediatePy/src/IntermediatePy/Gui/Pages/Report/Sidebar/Basic/Groups/: Export.qml
examples/IntermediatePy/src/IntermediatePy/Logic/: MockBackendProxy.qml  qmldir  real_backend_proxy.py
examples/IntermediatePy/src/IntermediatePy/Logic/Mock/: BackendProxy.qml
examples/IntermediatePy/src/IntermediatePy/Logic/MockQml/: Project.qml  Report.qml  Status.qml
examples/IntermediatePy/src/IntermediatePy/Logic/Py/: Status.py  backend_proxy.py  connections.py  project.py  report.py  status.py
examples/IntermediatePy/src/IntermediatePy/Logic/RealPy/: connections.py  project.py  status.py
examples/most-basic/: index.html  index.js
scripts/: install_from_wheel.sh
src/EasyApp/: __init__.py
vscode/: launch.json
(+384 files in other folders)
