[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "EasyApp"
version = "0.5.0"
description = "Graphical application skeleton in the EasyScience universe."
authors = [
  {name = "Andrew Sazonov", email = "andrew.sazonov@ess.eu"}
]
license = {file = 'LICENSE'}
classifiers = [
  'Development Status :: 4 - Beta',
  'License :: OSI Approved :: BSD License',
  'Programming Language :: Python :: 3'
  'Operating System :: MacOS',
  'Operating System :: Microsoft :: Windows',
  'Operating System :: POSIX :: Linux'
]
requires-python = ">=3.11"
dependencies = [
  'PySide6>=6.6,<6.8'
]

[project.urls]
Homepage = 'https://github.com/easyscience/EasyApp'
