[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[project]
name = 'EasyApp'
version = '0.5.0'
description = 'Graphical application skeleton in the EasyScience universe.'
authors = [
  {name = 'Andrew Sazonov', email = 'andrew.sazonov@ess.eu'}
]
license = {file = 'LICENSE'}
classifiers = [
  'Development Status :: 4 - Beta',
  'License :: OSI Approved :: BSD License',
  'Programming Language :: Python :: 3',
  'Operating System :: MacOS',
  'Operating System :: Microsoft :: Windows',
  'Operating System :: POSIX :: Linux'
]
requires-python = '>=3.10'
dependencies = [
  'PySide6>=6.6,<6.8'
]

[project.urls]
homepage = 'https://app.easyscience.software'
source = 'https://github.com/EasyScience/EasyApp'
tracker = 'https://github.com/EasyScience/EasyApp/issues'

[tool.hatch.build.targets.wheel]
packages = ['src/EasyApp']
